dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT

dnl Not really necessary (we have no C sources), but autoconf requires it
AC_CONFIG_HEADERS(config.h)

dnl Needed by automake (e.g. for make dist)
AM_INIT_AUTOMAKE(Pipeline, 0.1, no-define)

dnl This is only needed because bootstrap issues a libtoolize command
AC_PROG_LIBTOOL

dnl Check for Python
AM_PATH_PYTHON

dnl Check for LOFAR specific things
lofar_INIT
dnl lofar_PYTHON(1)

dnl Output Makefiles
AC_OUTPUT(
Core/Makefile
library/Makefile
Makefile)
